@@ -109,6 +109,8 @@ def train_model(config: dict, fun_control: dict, timestamp: bool = True) -> floa
     model = build_model_instance(config, fun_control)
     dm = LightDataModule(
         dataset=fun_control["data_set"],
+        data_full_train=fun_control["data_full_train"],
+        data_test=fun_control["data_test"],
         batch_size=config["batch_size"],
         num_workers=fun_control["num_workers"],
         test_size=fun_control["test_size"],
