@@ -1,3 +1,8 @@
+
+spotpython 0.18.7:
+
+Separate train and test data sets can be passed to Lightning DataModules
+
 spotpython 0.18.6:
 
 - split.py:
